force-app/main/default/src/objects/et4ae5__IndividualLink__c/fields/et4ae5__ExactTargetLinkID__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__ExactTargetLinkID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Marketing Cloud Link ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>