force-app/main/default/src/objects/et4ae5__IndividualLink__c/fields/et4ae5__Last_Clicked__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Last_Clicked__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date and time this link was last clicked by this subscriber</inlineHelpText>
    <label>Last Clicked</label>
    <type>DateTime</type>
</CustomField>