force-app/main/default/src/objects/et4ae5__IndividualLink__c/fields/et4ae5__LinkURL__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__LinkURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link URL</label>
    <type>Url</type>
</CustomField>