force-app/main/default/src/objects/et4ae5__IndividualLink__c/fields/et4ae5__Unique_Link_ID__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Unique_Link_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Unique Link ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>